plugins {
    id 'java'
    //id 'org.jetbrains.intellij' version '0.4.16'
    id 'org.jetbrains.intellij.platform' version '2.0.1'
    /*id("org.jetbrains.intellij.platform.migration") version "2.0.1"*/
}

group 'io.github.tia-ru'
version '1.1'

repositories {
    mavenCentral()
    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    //testImplementation 'junit:junit:4.12'
    intellijPlatform {
        intellijIdeaCommunity('2023.1')

        bundledPlugin 'com.intellij.java'
        bundledPlugin 'com.intellij.properties'

        instrumentationTools()
    }
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
/*intellij {
    //version '2020.2'
    //version '2019.2.4'
    type 'IC'
    //type 'IU'
    downloadSources = true
    //plugins = ['properties', 'java', 'Spring']
    plugins = ['properties', 'java']

    runIde{
        jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED'
    }
}*/


/*patchPluginXml {
    //sinceBuild 'IC-202'
    sinceBuild 'IC-192'
    untilBuild null
    *//*changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>
      """*//*
}*/
java {
    sourceCompatibility='17'
    targetCompatibility='17'
}

intellijPlatform {
    pluginConfiguration {
        ideaVersion {
            //sinceBuild 'IC-192'
            //sinceBuild '223.7571.182'
            sinceBuild = '231'
            untilBuild = provider { null }
        }
    }
}

runIde.jvmArgs += "-XX:+UnlockDiagnosticVMOptions"